src/it/istio/src/test/k3s/dashboard/rbac.yaml
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: kubernetes-dashboard
rules:
  # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
  - apiGroups: [""]
    resources: [secrets]
    resourceNames:
      - kubernetes-dashboard-key-holder
      - kubernetes-dashboard-certs
      - kubernetes-dashboard-csrf
    verbs:
      - get
      - update
  # Allow Dashboard to get and update 'kubernetes-dashboard-settings' config map.
  - apiGroups: [""]
    resources: [configmaps]
    resourceNames:
      - kubernetes-dashboard-settings
    verbs:
      - get
      - update
  # Allow Dashboard to get metrics.
  - apiGroups: [""]
    resources:
      - services
    resourceNames:
      - kubernetes-dashboard-metrics
    verbs:
      - proxy
  - apiGroups: [""]
    resources:
      - services/proxy
    resourceNames:
      - kubernetes-dashboard-metrics
      - http:kubernetes-dashboard-metrics
    verbs:
      - get
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: kubernetes-dashboard
rules:
  # Allow Metrics Scraper to get metrics from the Metrics server
  - apiGroups: [metrics.k8s.io]
    resources:
      - pods
      - nodes
    verbs:
      - get
      - list
      - watch
  # Do everything
  - apiGroups: ["*"]
    resources: ["*"]
    verbs: ["*"]
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: kubernetes-dashboard
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kubernetes-dashboard
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kubernetes-dashboard
subjects:
  - kind: ServiceAccount
    name: kubernetes-dashboard
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kubernetes-dashboard
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kubernetes-dashboard
subjects:
  - kind: ServiceAccount
    name: kubernetes-dashboard
