src/it/istio/src/test/k3s/dashboard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-dashboard
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
